重构：修复用户登录注册、学号认证及漂流流程Bug